# Urban-Systems-Flooding

./: .gitignore  README.md  pyproject.toml
data/: control_property_vals_vs_time.csv  data_backup.xlsx  joined_data.csv  joined_water_proximity.csv  multivariate_control_data.csv  multivariate_control_data2.csv  multivariate_control_data3.csv  multivariate_data.csv  multivariate_data.sas7bdat  multivariate_data2.csv  multivariate_data_diff.csv  multivariate_data_sas.csv  multivariate_data_sas.sas7bdat  population_data.csv  property_vals_vs_time.csv  water_proximity.csv
src/: ControlMultivariateRegression.py  ControlPredInvst.py  ControlProperties.py  MultivariateRegression.py  MultivariateRegression2.py  PredictorInvestigation.py  PredictorPlots.py  PredictorPlots2.py  Properties.py  Properties2.py
