[tool.poetry]
name = "urban-systems-flooding"
version = "0.1.0"
description = ""
authors = ["alexraum <maraum@ncsu.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
sklearn = "^0.0"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
